--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
-spring.jpa.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.dialect=org.hibernate.dialect.MySQL8Dialect
